// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.admin.participant.v30;

/*
 * Service to retrieve information about the traffic state of the participant.
 */
service TrafficControlService {
  rpc TrafficControlState(TrafficControlStateRequest) returns (TrafficControlStateResponse);
}

message TrafficControlStateRequest {
  string domain_id = 1; // Domain id for which to retrieve the traffic state
}

message TrafficControlStateResponse {
  TrafficState traffic_state = 1;
}

// Traffic state of a member at a given timestamp - This is a clone of the TrafficState message in sequencing.proto
// We have to duplicate it here because the admin API protos are self contained and do not depend on the sequencer API protos
message TrafficState {
  // Total amount of extra traffic purchased
  int64 extra_traffic_purchased = 1;
  // Total amount of extra traffic consumed
  int64 extra_traffic_consumed = 2;
  // Amount of base traffic remaining
  int64 base_traffic_remainder = 3;
  // Cost deducted at `timestamp`, only present when traffic was consumed at `timestamp`, otherwise is set to 0
  uint64 last_consumed_cost = 4;
  // Timestamp at which the state is valid
  int64 timestamp = 5;
  // Optional serial of the balance update that updated the extra traffic limit
  optional uint32 serial = 6;
}
